added final touch to the logic and here is our ready

--- a/style.css
+++ b/style.css
@@ -110,5 +110,13 @@ body{
 
 .weather{
     display: none;
-    
+
+}
+
+.error {
+    text-align: left;
+    margin-left: 10px;
+    margin-top: 5px;
+    font-size: 14px;
+    display: none;
 }
